--- a/cardio.html
+++ b/cardio.html
@@ -38,14 +38,14 @@
             </ul>
         </div>
     </nav>
-    <header class="page-header header container-fluid">
+    <header class="page-header cardio-header container-fluid">
         <div class="overlay">
             <div class="description">
-                <h1>Welcome to the Landing Page!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
-                    consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
-                <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+                <h1>Cardio</h1>
+                <p>Cardio helps burn a lot of calories, speeds up our metabolism and improves our body mass index (BMI).
+                    Performing cardio exercises regularly will help us maintain our ideal weight. It helps control blood
+                    pressure and strengthens the immune system.</p>
+                <!-- <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button> -->
             </div>
         </div>
     </header>
@@ -54,11 +54,13 @@
             <ol type="I">
                 <li>
                     <div class="single-block">
-                        <figure>
-                            <img src="images/treadmill.jpg" alt="">
-                        </figure>
+                        <a href="treadmill.html">
+                            <figure>
+                                <img src="images/treadmill.jpg" alt="">
+                            </figure>
+                        </a>
                         <div class="left-text">
-                            <h2><a href="#">Treadmills</a></h2>
+                            <h4>Treadmills</a></h4>
                             <p>Running is excellent for your health in general, but it’s even better when you have a
                                 treadmill in your own home.</p>
                         </div>
@@ -66,13 +68,15 @@
                 </li>
                 <li>
                     <div class="single-block">
-                        <figure>
-                            <img src="images/elliptical_machines.png" alt="">
-                        </figure>
+                        <a href="elliptical.html">
+                            <figure>
+                                <img src="images/elliptical_machines.png" alt="">
+                            </figure>
+                        </a>
                         <div class="left-text">
-                            <h2><a href="#">Elliptical Machines</a></h2>
-                            <p>Running is excellent for your health in general, but it’s even better when you have a
-                                treadmill in your own home.</p>
+                            <h4>Elliptical Machines</h4>
+                            <p>A machine which you can use for stair climbing, walking, running, or
+                                sprinting exercises and a great calorie burning machine.</p>
                         </div>
                     </div>
                 </li>
@@ -82,7 +86,7 @@
                             <img src="images/exercise_bikes.jpg" alt="">
                         </figure>
                         <div class="left-text">
-                            <h2><a href="#">Exercise Bikes</a></h2>
+                            <h4>Exercise Bikes</h4>
                             <p>Bootsing Cardio fitness is very good for health and cycling is execellent way to get your
                                 heart pumping.</p>
                         </div>
