--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Bootstrap Tutorial Sample Page</title>
+    <title>Fitness Fitlife</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -13,7 +13,9 @@
 
 <body>
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#"><span class="letter" data-letter="FITLIFE">FITLIFE</span></a>
+        <a class="navbar-brand" href="#">
+            <div class="letter" data-letter="FITLIFE">FITLIFE</div>
+        </a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -41,7 +43,7 @@
     <header class="page-header header container-fluid">
         <div class="overlay">
             <div class="description">
-                <h1>Welcome to the Landing Page!</h1>
+                <h1>Welcome to FitLife Fitness and Training Center!</h1>
                 <p>We at Fitness Fitlife offer a vareity of services in gym equipments</p>
                 <a href="#moreinformation" class="btn btn-outline-secondary btn-lg">Tell Me More!</a>
             </div>
