--- a/cardio.html
+++ b/cardio.html
@@ -13,26 +13,28 @@
 
 <body>
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#"><span class="letter" data-letter="FITLIFE">FITLIFE</span></a>
+        <a class="navbar-brand" href="index.html">
+            <div class="letter" data-letter="FITLIFE">FITLIFE</div>
+        </a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Classes</a>
+                    <a class="nav-link" href="classes.html">Classes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Memberships</a>
+                    <a class="nav-link" href="member.html">Memberships</a>
                 </li>
 
             </ul>
@@ -41,11 +43,10 @@
     <header class="page-header cardio-header container-fluid">
         <div class="overlay">
             <div class="description">
-                <h1>Cardio</h1>
+                <h1>Welcome to FitLife Fitness and Training Center!</h1>
                 <p>Cardio helps burn a lot of calories, speeds up our metabolism and improves our body mass index (BMI).
                     Performing cardio exercises regularly will help us maintain our ideal weight. It helps control blood
                     pressure and strengthens the immune system.</p>
-                <!-- <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button> -->
             </div>
         </div>
     </header>
