--- a/strength.html
+++ b/strength.html
@@ -13,26 +13,28 @@
 
 <body>
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand" href="#"><span class="letter" data-letter="FITLIFE">FITLIFE</span></a>
+        <a class="navbar-brand" href="index.html">
+            <div class="letter" data-letter="FITLIFE">FITLIFE</div>
+        </a>
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="main-navigation">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Classes</a>
+                    <a class="nav-link" href="classes.html">Classes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="services.html">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Memberships</a>
+                    <a class="nav-link" href="member.html">Memberships</a>
                 </li>
 
             </ul>
@@ -41,7 +43,7 @@
     <header class="page-header header container-fluid">
         <div class="overlay">
             <div class="description">
-                <h1>Welcome to the Landing Page!</h1>
+                <h1>Welcome to FitLife Fitness and Training Center!</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
                     ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
                     consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
@@ -80,7 +82,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                    <p>1640 Devonshire Mall, Tecumseh Road, 
+                    <p>1640 Devonshire Mall, Tecumseh Road,
                         <br />info@fitlife.com
                         <br />+1 4379874353
                 </div>
