--- a/cardio.html
+++ b/cardio.html
@@ -83,12 +83,14 @@
                 </li>
                 <li>
                     <div class="single-block">
-                        <figure>
-                            <img src="images/exercise_bikes.jpg" alt="">
-                        </figure>
+                        <a href="exercise_bike.html">
+                            <figure>
+                                <img src="images/exercise_bikes.jpg" alt="">
+                            </figure>
+                        </a>
                         <div class="left-text">
                             <h4>Exercise Bikes</h4>
-                            <p>Bootsing Cardio fitness is very good for health and cycling is execellent way to get your
+                            <p>Boosting Cardio fitness is very good for health and cycling is execellent way to get your
                                 heart pumping.</p>
                         </div>
                     </div>
