--- a/exercise_bike.html
+++ b/exercise_bike.html
@@ -40,36 +40,36 @@
             </ul>
         </div>
     </nav>
-    <header class="page-header elliptical-header container-fluid">
+    <header class="page-header exercisebike-header container-fluid">
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Elliptical Machines</p>
+                <p>Exercise Bike</p>
             </div>
         </div>
     </header>
     <div class="container features">
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="./images/elliptical_machines1.png" alt="Card image cap">
+                <img class="card-img-top" src="./images/exercise_bikes1.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Elliptical Machines v1</h5>
+                    <h5 class="card-title">Exercise Bike v1</h5>
                     <p class="card-text">$2000</p>
                     <p class="card-text"><small class="text-muted">Associated Exercises: Climbing</small></p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./images/elliptical_machines2.png" alt="Card image cap">
+                <img class="card-img-top" src="./images/exercise_bikes2.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Elliptical Machines v2</h5>
+                    <h5 class="card-title">Exercise Bike v2</h5>
                     <p class="card-text">$2000</p>
                     <p class="card-text"><small class="text-muted">Associated Exercises: Climbing</small></p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./images/elliptical_machines3.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./images/exercise_bikes3.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Elliptical Machines v3</h5>
+                    <h5 class="card-title">Exercise Bike v3</h5>
                     <p class="card-text">$2000</p>
                     <p class="card-text"><small class="text-muted">Associated Exercises: Climbing</small></p>
                 </div>
