--- a/strength.html
+++ b/strength.html
@@ -52,7 +52,52 @@
         </div>
     </header>
     <div class="container features">
-        <div class="row">
+        <div class="product-image">
+            <ol type="I">
+                <li>
+                    <div class="single-block">
+						<a href="weight-machine.html">
+							<figure>
+								<img src="images/weight machine.jpg" alt="">
+							</figure>
+						</a>
+                        <div class="left-text">
+                            <h2>weight machines</h2>
+                            <p>A weight machine is used for weight training that uses gravity as the primary source 
+							of resistance.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+                        <a href="squat-stand.html">
+							<figure>
+								<img src="images/squat stand.jpg" alt="">
+							</figure>
+						</a>
+                        <div class="left-text">
+                            <h2>squat stand</h2>
+                            <p>A squat stand, sometimes also known as a rack,is designed to support 
+							weight when doing squat variations.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+						<a href="pullup-bars.html">
+							<figure>
+								<img src="images/pull up bars.jpg" alt="">
+							</figure>
+						</a>
+                        <div class="left-text">
+                            <h2>pull-up bars</h2>
+                            <p>The pullup is one of the most effective exercises for strengthening the 
+							back, arm and Shoulder muscles</p>
+                        </div>
+                    </div>
+                </li>
+            </ol>
+            <!-- <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <h3 class="feature-title">Cardio</h3>
                 <img src="images/cardio.jpg" class="img-fluid same-size">
@@ -71,6 +116,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
                     ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
             </div>
+        </div> -->
         </div>
     </div>
     <footer class="page-footer">
