--- a/classes.html
+++ b/classes.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -44,33 +45,39 @@
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
-                    consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+                <p>What we offer!</p>
                 <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
             </div>
         </div>
     </header>
     <div class="container features">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Cardio</h3>
-                <img src="images/cardio.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Strength</h3>
-                <img src="images/strength.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Others</h3>
-                <img src="images/others.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-            </div>
+        <div class="product-image">
+            <ol type="I">
+                <li>
+                    <div class="single-block">
+                        <div class="left-text">
+                            <h4>Fitness Classes</a></h4>
+                            <p>Fitness Class with Dietary Nutrition</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+                        <div class="left-text">
+                            <h4>Yoga Classes</h4>
+                            <p>Yoga class with all types of yoga services.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+                        <div class="left-text">
+                            <h4>Cycling Classes</h4>
+                            <p>Cycling Classes with all types of cycling offerings</p>
+                        </div>
+                    </div>
+                </li>
+            </ol>
         </div>
     </div>
     <footer class="page-footer">
@@ -82,7 +89,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                    <p>1640 Devonshire Mall, Tecumseh Road, 
+                    <p>1640 Devonshire Mall, Tecumseh Road,
                         <br />info@fitlife.com
                         <br />+1 4379874353
                 </div>
