--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -44,32 +45,40 @@
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
-                    consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+                <p>Who we are!</p>
                 <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
             </div>
         </div>
     </header>
     <div class="container features">
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Cardio</h3>
-                <img src="images/cardio.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p>At Fitlife Fitness, you’ll find amazing club amenities, a comfortable and inspiring environment and
+                    staff members always ready to help. Because we believe that the more you enjoy your fitness
+                    sessions, the more likely you are to stick with them and stay motivated. In addition to
+                    state-of-the-art equipment and resort-like facilities, we offer more group fitness classes and
+                    scheduled activities than anyplace else. From hot yoga to cool aquatics, we have something for every
+                    interest and taste. Come in today and discover how much fun fitness can be! That’s the Movati
+                    difference.</p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Strength</h3>
-                <img src="images/strength.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <h6 class="text-uppercase font-weight-bold">ACTIVITIES & GROUP FITNESS</h6>
+                <p>We make fitness feel good by offering a huge variety of activities and group fitness options, all
+                    included with your membership. There truly is something for everyone to enjoy.</p>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Others</h3>
-                <img src="images/others.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p>Location: 8AM to 7PM</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p>1640 Devonshire Mall, Tecumseh Road,
+                    <br />info@fitlife.com
+                    <br />+1 4379874353
             </div>
         </div>
     </div>
@@ -82,7 +91,7 @@
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-12">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                    <p>1640 Devonshire Mall, Tecumseh Road, 
+                    <p>1640 Devonshire Mall, Tecumseh Road,
                         <br />info@fitlife.com
                         <br />+1 4379874353
                 </div>
