second commit from raj end

--- a/pullup-bars.html
+++ b/pullup-bars.html
@@ -44,34 +44,34 @@
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Squat stand</p>
+                <p>Pull up bars</p>
             </div>
         </div>
     </header>
     <div class="container features">
         <div class="card-deck">
             <div class="card">
-                <img class="card-img-top" src="./images/squat stand1.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./images/pull-up bars1.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Squat stand v1</h5>
-                    <p class="card-text">$1400</p>
-                    <p class="card-text"><small class="text-muted">Associated Exercises: Back squats. </small></p>
+                    <h5 class="card-title">Pull-Up bars v1</h5>
+                    <p class="card-text">$1200</p>
+                    <p class="card-text"><small class="text-muted">Associated Exercises: Burpee pull ups. </small></p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./images/squat stand2.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./images/pull-up bars2.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Squat stand v2</h5>
-                    <p class="card-text">$1700</p>
-                    <p class="card-text"><small class="text-muted">Associated Exercises: Front squats. </small></p>
+                    <h5 class="card-title">Pull-up bars v2</h5>
+                    <p class="card-text">$1250</p>
+                    <p class="card-text"><small class="text-muted">Associated Exercises: Hanging knee raises.. </small></p>
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./images/squat stand3.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./images/pull-up bars3.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Squat stand v3</h5>
-                    <p class="card-text">$2000</p>
-                    <p class="card-text"><small class="text-muted">Associated Exercises: Bench pressing.</small></p>
+                    <h5 class="card-title">Pull-up bars v3</h5>
+                    <p class="card-text">$1850</p>
+                    <p class="card-text"><small class="text-muted">Associated Exercises: Knees to elbows.</small></p>
                 </div>
             </div>
         </div>
