third commit fromm raj side

--- a/other.html
+++ b/other.html
@@ -44,15 +44,88 @@
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
-                    consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
-                <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+                <p> Other </p>
             </div>
         </div>
     </header>
-    <div class="container features">
-        <div class="row">
+     <div class="container features">
+        <div class="product-image">
+            <ol type="I">
+                <li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/Foot ball.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>FootBall</h2>
+                            <p>Fast paced game which requires players to run around the field allowing them to exercise quickly
+							</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/hand grips.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>hand grips</h2>
+                            <p>As the hand grippers work to improve the strength of individual fingers and it also 
+							increases your dexterity over time.</p>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/jump robes.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>jump robes</h2>
+                            <p>Just 30 minutes of jumping rope does wonders for building strength, and 
+							increasing overall muscle tone.</p>
+                        </div>
+                    </div>
+                </li>
+				<li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/lifting accessories.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>lifting accessories</h2>
+                            <p>The big lifts, while greatly beneficial in many ways, can take a toll on our bodies; 
+							especially our joints.</p>
+                        </div>
+                    </div>
+                </li>
+				<li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/mat.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>mats</h2>
+                            <p>A good exercise mat or yoga mat will basically protect you from the floor and 
+							the floor from you</p>
+                        </div>
+                    </div>
+                </li>
+				<li>
+                    <div class="single-block">
+							<figure>
+								<img src="images/cricket.jpg" alt="">
+							</figure>
+                        <div class="left-text">
+                            <h2>Cricket</h2>
+                            <p>Cricket is a good sport for developing overall fitness, stamina and 
+							hand–eye coordination</p>
+                        </div>
+                    </div>
+                </li>
+				
+            </ol>
+            <!-- <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <h3 class="feature-title">Cardio</h3>
                 <img src="images/cardio.jpg" class="img-fluid same-size">
@@ -71,6 +144,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
                     ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
             </div>
+        </div> -->
         </div>
     </div>
     <footer class="page-footer">
