--- a/other.html
+++ b/other.html
@@ -69,7 +69,7 @@
 								<img src="images/hand grips.jpg" alt="">
 							</figure>
                         <div class="left-text">
-                            <h2>hand grips</h2>
+                            <h2>Hand Grips</h2>
                             <p>As the hand grippers work to improve the strength of individual fingers and it also 
 							increases your dexterity over time.</p>
                         </div>
@@ -81,7 +81,7 @@
 								<img src="images/jump robes.jpg" alt="">
 							</figure>
                         <div class="left-text">
-                            <h2>jump robes</h2>
+                            <h2>Jump Robes</h2>
                             <p>Just 30 minutes of jumping rope does wonders for building strength, and 
 							increasing overall muscle tone.</p>
                         </div>
@@ -93,7 +93,7 @@
 								<img src="images/lifting accessories.jpg" alt="">
 							</figure>
                         <div class="left-text">
-                            <h2>lifting accessories</h2>
+                            <h2>Lifting Accessories</h2>
                             <p>The big lifts, while greatly beneficial in many ways, can take a toll on our bodies; 
 							especially our joints.</p>
                         </div>
@@ -105,7 +105,7 @@
 								<img src="images/mat.jpg" alt="">
 							</figure>
                         <div class="left-text">
-                            <h2>mats</h2>
+                            <h2>Mats</h2>
                             <p>A good exercise mat or yoga mat will basically protect you from the floor and 
 							the floor from you</p>
                         </div>
