--- a/about.html
+++ b/about.html
@@ -41,12 +41,12 @@
             </ul>
         </div>
     </nav>
-    <header class="page-header header container-fluid">
+    <header class="page-header container-fluid" id="about-header">
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
                 <p>Who we are!</p>
-                <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
+                <!-- <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button> -->
             </div>
         </div>
     </header>
