--- a/services.html
+++ b/services.html
@@ -44,9 +44,7 @@
         <div class="overlay">
             <div class="description">
                 <h1>Welcome to FitLife Fitness and Training Center!</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse
-                    consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
+                <p>Services that we are provide</p>
                 <button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
             </div>
         </div>
@@ -54,22 +52,27 @@
     <div class="container features">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Cardio</h3>
-                <img src="images/cardio.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <h3 class="feature-title">Cafeteria</h3>
+                <img src="images/cafe.jpg" class="img-fluid same-size">
+                <p> 
+				<li> Serving refreshing and rejuventing food </li>
+				 <li> Healthy and nutritious drinks are available </li>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Strength</h3>
-                <img src="images/strength.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <h3 class="feature-title">Sports clothing centre</h3>
+                <img src="images/shops.jpg" class="img-fluid same-size">
+                <p>
+				<li> clothes for various sports are available </li>
+				<li> kits, safety guards and shoes are also in stock </li>
+				</p>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
-                <h3 class="feature-title">Others</h3>
-                <img src="images/others.jpg" class="img-fluid same-size">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat
-                    ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
+                <h3 class="feature-title">Supplements</h3>
+                <img src="images/supplements.jpg" class="img-fluid same-size">
+                <p>
+				<li> Nutritional and dietary supplement</li>
+				<li> all kind of Supplements such as pill, powder or liquid form are available </li>
+				</p>
             </div>
         </div>
     </div>
