--- a/index.html
+++ b/index.html
@@ -55,30 +55,42 @@
                 <a class="para-link" href="./cardio.html">
                     <h3 class="feature-title">Cardio</h3>
                     <img src="images/cardio.jpg" class="img-fluid same-size">
-                    <p>Cardio helps burn a lot of calories, speeds up our metabolism and improves our body mass index
+                    <p>
+					<li>Cardio helps burn a lot of calories, speeds up our metabolism and improves our body mass index
                         (BMI).
+					</li>
+					<li>
                         Performing cardio exercises regularly will help us maintain our ideal weight. It helps control
                         blood
-                        pressure and strengthens the immune system.</p>
+                        pressure and strengthens the immune system.
+						</li></p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="para-link" href="./strength.html">
                     <h3 class="feature-title">Strength</h3>
                     <img src="images/strength.jpg" class="img-fluid same-size">
-                    <p>Strength training with machines is as effective as free weights, plus machines have the advantage
+                    <p>
+					<li> Strength training with machines is as effective as free weights, plus machines have the advantage
                         of
-                        being safer and easier to use. Since strength training machines are designed to exercise
+                        being safer and easier to use. 
+						</li>
+					<li>
+					Since strength training machines are designed to exercise
                         specific
                         muscle groups, you can get a faster, more efficient workout by moving from machine to machine.
-                    </p>
+                    </li>
+					</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <a class="para-link" href="./other.html">
                     <h3 class="feature-title">Others</h3>
                     <img src="images/others.jpg" class="img-fluid same-size">
-                    <p>We have variety of other fitness equipments </p>
+                    <p>Apart from the fitness, we are providing various kind of service</p>
+					<li>Cafe</li>
+					<li>Sports clothes centre</li>
+					<li>Supplements</li>
                 </a>
             </div>
         </div>
